--- a/src/view/layout/footer.html
+++ b/src/view/layout/footer.html
@@ -1,7 +1,8 @@
 <div class="footer">
     <div class="w">
         <div class="links">
-            <a class="link" href="http://www.imooc.com" target="_blank">慕课网</a> |
+            <a class="link" href="https://www.jikewenku.com" target="_blank">极客文库</a> |
+            <a class="link" href="http://www.geekerstar.com" target="_blank">极客之星</a> |
             <a class="link" href="https://www.baidu.com" target="_blank">百度</a> |
             <a class="link" href="https://www.taobao.com" target="_blank">淘宝</a> |
             <a class="link" href="https://www.zhihu.com" target="_blank">知乎</a>
