增加关于内容、并æ为项目上线做一些细节调æ代码的è°修改

--- a/src/view/layout/head-common.html
+++ b/src/view/layout/head-common.html
@@ -2,3 +2,6 @@
 <meta http-equiv="x-ua-compatible" content="ie=edge">
 <meta name="keywords" content="mmall,电商">
 <meta name="description" content="mmall电商平台">
+<link rel="dns-prefetch" href="//cdn.bootcss.com">
+<link rel="dns-prefetch" href="//s.verynavi.com">
+<link rel="dns-prefetch" href="//img.verynavi.com">
